[project]
name = "project-iristracking"
version = "0.1.0"
description = ""
authors = [
    {name = "EnChuang",email = "nickxd780@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mediapipe (>=0.10.32,<0.11.0)",
    "opencv-python (>=4.13.0.90,<5.0.0.0)"
]

[tool.poetry]
packages = [{include = "project_iristracking", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
